# todo-be

./: .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: python-app-ecs.yml  python-app.yml
alembic/: env.py
alembic/versions/: 05ad95fd9518_create_tables.py  20e13d98dd28_update_todo_model.py  65fdde2faf3a_create_tables.py  84787de59c6c_update_model_todo.py  9caf5ad62e19_add_message_id_to_model_todo.py  b2ad541d8b1c_create_table.py
apis/: api.py  auth.py  todo.py
controllers/: blacklist.py  todo.py  user.py
crud/: blacklist.py  todo.py
db/: database.py
models/: __init__.py  blacklist.py  todo.py  user.py
schemas/: blacklist.py  todo.py  user.py
utils/: db.py  email.py  env_loader.py  error.py  jwt.py  scheduler.py  send_mail_normal.py  send_mail_ses.py  ses.py  sqs.py  time.py
